# srlabapp

./: .dart_defines.example.json  .gitignore  AGENTS.md  KNOWN_ISSUES.md  README.md  TODO_MVP_GAPS.md  a.patch  netlify.toml  order.txt  pubspec.yaml  개발명세서.md
backend_api/: .env.example  README.md  alembic.ini  pyproject.toml
backend_api/alembic/: env.py
backend_api/alembic/versions/: 20260319_000001_initial_schema.py  20260319_000002_add_daily_bars.py  20260319_000003_support_engine_and_home_api.py  20260319_000004_admin_notifications_push.py  20260320_000005_content_publish_fields.py  20260320_000005_notification_dispatcher.py  20260320_000006_notification_dispatcher.py  20260320_000007_daily_bars_unique_constraint.py
backend_api/app/: main.py
backend_api/app/api/: dependencies.py
backend_api/app/core/: config.py  errors.py
backend_api/app/integrations/: firebase_admin.py
backend_api/app/models/: __init__.py  admin_audit_log.py  alert_setting.py  content_post.py  daily_bar.py  device_token.py  enums.py  home_featured_stock.py  mixins.py  notification.py  price_level.py  signal_event.py  stock.py  support_state.py  theme.py  (+2 more)
backend_api/backend_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend_api/scripts/: check_release_readiness.py  seed_minimum_data.py  sync_firebase_watchlist_prices.py
backend_api/tests/: conftest.py  test_alembic_integrity.py  test_firebase_sync_service.py  test_home_and_signals_api.py  test_notifications_and_admin_api.py  test_signal_batch_service.py  test_stocks_api.py  test_support_state_engine.py  test_watchlist_api.py
(+160 files in other folders)
